[gd_scene load_steps=21 format=3 uid="uid://ckjr7lbj1cxxq"]

[ext_resource type="Script" uid="uid://gavvic7ehdce" path="res://Scripts/main.gd" id="1_jjgbg"]
[ext_resource type="PackedScene" uid="uid://ddlqo71pgyb5i" path="res://Scenes/boarding_generator.tscn" id="2_kry3j"]
[ext_resource type="Material" uid="uid://bwfcdgloump5l" path="res://Shaders/speed_lines_material.tres" id="4_kry3j"]
[ext_resource type="FontFile" uid="uid://dtshncsgw6tes" path="res://Materials/Frutiger_bold.ttf" id="5_d1ilt"]
[ext_resource type="Texture2D" uid="uid://dq22rulx5iv7g" path="res://UI Assets/cash.png" id="5_hptm8"]
[ext_resource type="Environment" uid="uid://b3s7xlhtiytky" path="res://Materials/game_level_worldenvironment.tres" id="5_kry3j"]
[ext_resource type="Script" path="res://Scripts/count_down.gd" id="6_6bp64"]
[ext_resource type="FontFile" uid="uid://djcwcwvpuh7qw" path="res://Materials/Parisienne-Regular.ttf" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://chp52opwuhulv" path="res://Scenes/player.tscn" id="7_6bp64"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7u77a"]
albedo_color = Color(0.28485, 0.28485, 0.28485, 1)
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_jjgbg"]
material = SubResource("StandardMaterial3D_7u77a")
size = Vector2(10000, 10000)

[sub_resource type="GDScript" id="GDScript_kry3j"]
script/source = "extends Control


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	var speed:float = %Player.forward_speed + 10.0
	var max_speed:float = 40.0
	var ratio:float = speed / max_speed
	
	var min_dens = 0.27
	var max_dens = 0.5
	
	var min_fal = 0.917
	var max_fal = 0.56
	
	var min_edge = 0.917
	var max_edge = 0.56
	
	$ColorRect.material.set_shader_parameter(\"line_density\", lerpf(min_dens, max_dens, ratio))
	$ColorRect.material.set_shader_parameter(\"line_faloff\", lerpf(min_fal, max_fal, ratio))
	$ColorRect.material.set_shader_parameter(\"mask_edge\", lerpf(min_edge, max_edge, ratio))
	
	pass
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hptm8"]
bg_color = Color(0.625597, 0.625597, 0.625597, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1ilt"]
bg_color = Color(0.627451, 0.627451, 0.627451, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_jjvhh"]
font_size = 30
font_color = Color(0.541176, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6bp64"]
font = ExtResource("6_21xkr")
font_size = 96
font_color = Color(0.353449, 0.622917, 0.999992, 1)
outline_size = 24
outline_color = Color(0.964706, 0.596078, 0, 1)

[sub_resource type="Animation" id="Animation_344ge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownText:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountdownText:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountdownText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountdownText:label_settings:font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [96]
}

[sub_resource type="Animation" id="Animation_ynf5e"]
resource_name = "go"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownText:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountdownText:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountdownText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667, 0.933333, 2),
"transitions": PackedFloat32Array(1, 1, 0.466516),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountdownText:label_settings:font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 0.203063, 0.517632),
"update": 0,
"values": [800, 80, 128]
}

[sub_resource type="Animation" id="Animation_6bp64"]
resource_name = "number_down"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CountdownText:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.3, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CountdownText:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.3, 0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CountdownText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.1),
"transitions": PackedFloat32Array(1, 1, 1.68179),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_344ge"]
_data = {
&"RESET": SubResource("Animation_344ge"),
&"go": SubResource("Animation_ynf5e"),
&"number_down": SubResource("Animation_6bp64")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_jjgbg")

[node name="BoardingGenerator" parent="." instance=ExtResource("2_kry3j")]
seed = 384412
total_path = 460
editor_difficulty = 10

[node name="Turn Left" parent="BoardingGenerator" index="1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -66, 3, 82)

[node name="BoardRamp 2" parent="BoardingGenerator" index="2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10, 3, 82)
length = 56.0

[node name="Turn Right" parent="BoardingGenerator" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 72)

[node name="BoardRamp 3" parent="BoardingGenerator" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -76, 3, 92)
length = 88.0

[node name="BoardRampEnd" parent="BoardingGenerator" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 3, 360)

[node name="EndZone" parent="BoardingGenerator" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 376)

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_jjgbg")

[node name="MainCameraAnchor" type="Node3D" parent="."]

[node name="MainCamera" type="Camera3D" parent="MainCameraAnchor"]
transform = Transform3D(-1, 8.72542e-08, -1.23234e-07, 0, 0.816138, 0.577858, 1.50996e-07, 0.577858, -0.816138, 0, 10.239, -4)
current = true
fov = 90.0

[node name="Speed Lines" type="Control" parent="MainCameraAnchor/MainCamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_kry3j")

[node name="ColorRect" type="ColorRect" parent="MainCameraAnchor/MainCamera/Speed Lines"]
material = ExtResource("4_kry3j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainCameraAnchor/MainCamera/Speed Lines"]
custom_minimum_size = Vector2(333, 100)
layout_mode = 1
offset_left = 27.0
offset_top = 25.0
offset_right = 360.0
offset_bottom = 125.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hptm8")

[node name="BoxContainer" type="BoxContainer" parent="MainCameraAnchor/MainCamera/Speed Lines/Panel"]
layout_mode = 1
offset_right = 337.0
offset_bottom = 100.0

[node name="HeartContainer" type="HBoxContainer" parent="MainCameraAnchor/MainCamera/Speed Lines/Panel/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="MainCameraAnchor/MainCamera/Speed Lines"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -323.0
offset_top = 25.0
offset_right = -26.0
offset_bottom = 125.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_d1ilt")

[node name="Money" type="RichTextLabel" parent="MainCameraAnchor/MainCamera/Speed Lines/Panel2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/default_color = Color(0.215686, 0.580392, 0.431373, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("5_d1ilt")
theme_override_font_sizes/normal_font_size = 40
text = "$1000000"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainCameraAnchor/MainCamera/Speed Lines/Panel2"]
layout_mode = 1
offset_top = 5.0
offset_right = 100.0
offset_bottom = 94.0
texture = ExtResource("5_hptm8")
expand_mode = 2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.336559, -0.297803, 0.893332, 0.0138687, 0.947005, 0.32092, -0.94156, 0.120398, -0.314593, 0, 0, 0)
light_bake_mode = 1
shadow_enabled = true
directional_shadow_max_distance = 250.0

[node name="Player" parent="." instance=ExtResource("7_6bp64")]
unique_name_in_owner = true
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.35489, 0)
blink_interval = 0.2

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(-1, 0, -8.74228e-08, -2.26267e-08, 0.965926, 0.258819, 8.44439e-08, 0.258819, -0.965926, 0, 4.81599, -4.59698)

[node name="FPS Counter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FPSLabel" type="Label" parent="FPS Counter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "FPS: "
label_settings = SubResource("LabelSettings_jjvhh")

[node name="Speed" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="SpeedLabel" type="Label" parent="Speed"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_bottom = 42.0
grow_horizontal = 0
text = "Speed: "
label_settings = SubResource("LabelSettings_jjvhh")

[node name="Diff" type="Label" parent="Speed"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_top = 45.0
offset_bottom = 87.0
grow_horizontal = 0
text = "Diff:"
label_settings = SubResource("LabelSettings_jjvhh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_kry3j")

[node name="CountDown" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_6bp64")

[node name="CountdownText" type="Label" parent="CountDown"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -249.0
offset_top = -64.5
offset_right = 249.0
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
text = "GO!"
label_settings = SubResource("LabelSettings_6bp64")
horizontal_alignment = 1

[node name="CountAnim" type="AnimationPlayer" parent="CountDown"]
libraries = {
&"": SubResource("AnimationLibrary_344ge")
}
speed_scale = 2.0

[node name="UpdateVisTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="UpdateVisTimer" to="." method="_on_update_vis_timer_timeout"]

[editable path="BoardingGenerator"]
